fix width on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,13 @@
 /*
  * general
  */
+ html {
+  width:100vmax;
+ }
  body {
   font-family: Arial, sans-serif;
   background: #f5f5f5;
 }
-
 * {
   border-radius: 10px;
   margin:0px;
